WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
276871
[Text Directionality] Fix directionality of non-HTML elements
https://bugs.webkit.org/show_bug.cgi?id=276871
Summary
[Text Directionality] Fix directionality of non-HTML elements
Tim Nguyen (:ntim)
Reported
2024-07-21 19:20:29 PDT
https://wpt.fyi/html/dom/elements/global-attributes/dir-assorted.window.html
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-07-21 19:20:38 PDT
<
rdar://problem/132210868
>
Tim Nguyen (:ntim)
Comment 2
2024-07-21 20:06:00 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/31048
Said Abou-Hallawa
Comment 3
2024-08-07 16:24:19 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/31866
EWS
Comment 4
2024-08-08 10:02:40 PDT
Committed
281998@main
(e66ab86f1ac5): <
https://commits.webkit.org/281998@main
> Reviewed commits have been landed. Closing PR #31866 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug