[Text Directionality] Fix directionality of non-HTML elements https://bugs.webkit.org/show_bug.cgi?id=276871 rdar://132210868

Reviewed by NOBODY (OOPS!).

(WIP, needs to implement invalidation when text content of non-HTML node changes)

* LayoutTests/imported/w3c/web-platform-tests/html/dom/elements/global-attributes/dir-assorted.window-expected.txt:
* Source/WebCore/css/SelectorCheckerTestFunctions.h:
(WebCore::matchesDirPseudoClass):
* Source/WebCore/dom/Element.cpp:
(WebCore::Element::insertedIntoAncestor):
* Source/WebCore/dom/Node.h:
(WebCore::Node::elementAffectsDirectionality const):
* Source/WebCore/html/HTMLElement.cpp:
(WebCore::HTMLElement::insertedIntoAncestor):
(WebCore::setHasDirAutoFlagRecursively):
(WebCore::HTMLElement::elementAffectsDirectionality const):
(WebCore::HTMLElement::computeDirectionalityFromText const):
(WebCore::HTMLElement::updateEffectiveDirectionality):
(WebCore::HTMLElement::adjustDirectionalityIfNeededAfterChildAttributeChanged):
(WebCore::HTMLElement::adjustDirectionalityIfNeededAfterChildrenChanged):
(WebCore::elementAffectsDirectionality): Deleted.
* Source/WebCore/html/HTMLElement.h: